fixing Syffal demo

--- a/Syffal-demo/index.html
+++ b/Syffal-demo/index.html
@@ -1,31 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" xml:lang="en-US">
-<!-- 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN"
-  "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" version="XHTML+RDFa 1.0" dir="ltr"
-  xmlns:content="http://purl.org/rss/1.0/modules/content/"
-  xmlns:dc="http://purl.org/dc/terms/"
-  xmlns:foaf="http://xmlns.com/foaf/0.1/"
-  xmlns:og="http://ogp.me/ns#"
-  xmlns:rdfs="http://www.w3.org/2000/01/rdf-schema#"
-  xmlns:sioc="http://rdfs.org/sioc/ns#"
-  xmlns:sioct="http://rdfs.org/sioc/types#"
-  xmlns:skos="http://www.w3.org/2004/02/skos/core#"
-  xmlns:xsd="http://www.w3.org/2001/XMLSchema#"
-  xmlns:fb="http://ogp.me/ns/fb#"
-  itemscope itemtype="http://schema.org/Article"
-  xmlns:article="http://ogp.me/ns/article#"
-  xmlns:book="http://ogp.me/ns/book#"
-  xmlns:profile="http://ogp.me/ns/profile#"
-  xmlns:video="http://ogp.me/ns/video#"
-  xmlns:product="http://ogp.me/ns/product#">
- -->
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="shortcut icon" href="http://www.syffal.com/sites/default/files/favicon_0.gif" type="image/gif">
-    <title>Best Albums of 2015 | www.syffal.com</title>
+    <title>One Song - Sympathetic Frequencies - Wake Up | www.syffal.com</title>
     <meta name="viewport" content="width=device-width; initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="syffal_files/css_xE-rWrJf-fncB6ztZfd2huxqgxu4WO-qwma6Xer30m4.css" media="all">
     <link type="text/css" rel="stylesheet" href="syffal_files/css_Y-mYd1d5mC_zGM0jeoocZs9JOily-y7rYJ69qLaq9lE.css" media="all">
@@ -410,112 +389,114 @@
                 <!-- /#container -->
             </div>
         </div>
-            <!-- /#wrapper -->
+        <!-- /#wrapper -->
 
-            <footer>
-                <div class="footerWrapper">
-                    <div class="footerContainer">
-                        <div class="footerLikes">
-                            <div class="region region-footerlikes">
-                                <div id="block-multiblock-3" class="block block-multiblock clearfix">
-
-
-                                    <div class="content">
-                                        <div class="ssc-follow-box-wrapper">
-                                            <a title="Follow SYFFAL.com on Facebook for the best new indie music." class="facebook" href="https://facebook.com/syffal" target="_blank">
-                                                <span class="fa-facebook-square"></span>
-                                            </a>
-                                            <a title="Follow SYFFAL.com on Twitter for the best new indie music." class="twitter" href="https://twitter.com/syffal" target="_blank">
-                                                <span class="fa-twitter"></span>
-                                            </a>
-                                            <a title="Follow SYFFAL.com on Google Plus for the best new indie music." class="googleplus-button" href="https://plus.google.com/110415883023533970314/about" target="_blank">
-                                                <span class="fa-google-plus "></span>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="footerInfo">
-                            <div class="region region-footer">
-                                <div id="block-footer-message-footer-message" class="block block-footer-message clearfix">
+        <footer>
+            <div class="footerWrapper">
+                <div class="footerContainer">
+                    <div class="footerLikes">
+                        <div class="region region-footerlikes">
+                            <div id="block-multiblock-3" class="block block-multiblock clearfix">
 
 
-                                    <div class="content">
-                                        <ul>
-                                            <li><a title="SYFFAL.com writers and critics" href="http://www.syffal.com/about">Contributors</a></li>
-                                            <li><a title="Submit your music to SYFFAL.com" href="http://www.syffal.com/submissions">Music Submissions</a></li>
-                                            <li><a title="Please read our music submission guidelines before submitting your music" href="http://www.syffal.com/submission-guidelines">Music Submissions Guidelines</a></li>
-                                            <li class="last">© Copyright SYFFAL.com
-                                                <!--?php echo date("Y"); ?-->
-                                            </li>
-                                        </ul>
+                                <div class="content">
+                                    <div class="ssc-follow-box-wrapper">
+                                        <a title="Follow SYFFAL.com on Facebook for the best new indie music." class="facebook" href="https://facebook.com/syffal" target="_blank">
+                                            <span class="fa-facebook-square"></span>
+                                        </a>
+                                        <a title="Follow SYFFAL.com on Twitter for the best new indie music." class="twitter" href="https://twitter.com/syffal" target="_blank">
+                                            <span class="fa-twitter"></span>
+                                        </a>
+                                        <a title="Follow SYFFAL.com on Google Plus for the best new indie music." class="googleplus-button" href="https://plus.google.com/110415883023533970314/about" target="_blank">
+                                            <span class="fa-google-plus "></span>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <div class="footerInfo">
+                        <div class="region region-footer">
+                            <div id="block-footer-message-footer-message" class="block block-footer-message clearfix">
+
+
+                                <div class="content">
+                                    <ul>
+                                        <li><a title="SYFFAL.com writers and critics" href="http://www.syffal.com/about">Contributors</a></li>
+                                        <li><a title="Submit your music to SYFFAL.com" href="http://www.syffal.com/submissions">Music Submissions</a></li>
+                                        <li><a title="Please read our music submission guidelines before submitting your music" href="http://www.syffal.com/submission-guidelines">Music Submissions Guidelines</a></li>
+                                        <li class="last">© Copyright SYFFAL.com
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </footer>
-            <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-            <!--                <script type="text/javascript" src="syffal_files/ssc_main.js"></script>-->
-            <script type="text/javascript" src="syffal_files/ssc_floating_navigation.js"></script>
-            <script type="text/javascript">
-                jQuery(function ($) {
-                    $('#sidr-wrapper-2 a').on('click touchstart', function () {
-                        $(this).toggleClass("active");
-                    });
+            </div>
+        </footer>
+        <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/1.2.1/jquery-migrate.min.js"></script>
+        <!--                <script type="text/javascript" src="syffal_files/ssc_main.js"></script>-->
+        <script type="text/javascript" src="syffal_files/ssc_floating_navigation.js"></script>
+        <script type="text/javascript">
+            jQuery(function ($) {
+                $('#sidr-wrapper-2 a').on('click touchstart', function () {
+                    $(this).toggleClass("active");
                 });
-            </script>
+            });
+        </script>
 
 
-            <script>
-                var SoundninjaOpts = {
-                    selector: '.view-content h3',
-                    selectorFullMatch: false,
-                    minHotttnesss: 0.6707,
-                    minFamiliarity: 0.6707
-                }
-            </script>
-            <script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script>
-
-
-            <div class="sidr left" id="sidr-1">
-                <div class="sidr-inner">
-                    <li class="sidr-class-menu-381 sidr-class-menu-path-node-40 sidr-class-first sidr-class-odd "><a href="http://www.syffal.com/videos" title="Indie music videos">Videos</a></li>
-                    <li class="sidr-class-menu-389 sidr-class-menu-path-node-12  sidr-class-even "><a href="http://www.syffal.com/album-reviews" title="Indie music album reviews.">Album Reviews</a></li>
-                    <li class="sidr-class-menu-383 sidr-class-menu-path-node-20  sidr-class-odd "><a href="http://www.syffal.com/interviews" title="Indie music interviews">Interviews</a></li>
-                    <li class="sidr-class-menu-384 sidr-class-menu-path-node-98 sidr-class-active-trail  sidr-class-even "><a href="http://www.syffal.com/articles" title="Indie music articles.">Articles</a></li>
-                    <li class="sidr-class-menu-385 sidr-class-menu-path-node-23  sidr-class-odd sidr-class-last"><a href="http://www.syffal.com/music-submissions" title="Indie music blog that reviews your music. Submit your music for review here.">Music Submissions</a></li>
-                </div>
+        <div class="sidr left" id="sidr-1">
+            <div class="sidr-inner">
+                <li class="sidr-class-menu-381 sidr-class-menu-path-node-40 sidr-class-first sidr-class-odd "><a href="http://www.syffal.com/videos" title="Indie music videos">Videos</a></li>
+                <li class="sidr-class-menu-389 sidr-class-menu-path-node-12  sidr-class-even "><a href="http://www.syffal.com/album-reviews" title="Indie music album reviews.">Album Reviews</a></li>
+                <li class="sidr-class-menu-383 sidr-class-menu-path-node-20  sidr-class-odd "><a href="http://www.syffal.com/interviews" title="Indie music interviews">Interviews</a></li>
+                <li class="sidr-class-menu-384 sidr-class-menu-path-node-98 sidr-class-active-trail  sidr-class-even "><a href="http://www.syffal.com/articles" title="Indie music articles.">Articles</a></li>
+                <li class="sidr-class-menu-385 sidr-class-menu-path-node-23  sidr-class-odd sidr-class-last"><a href="http://www.syffal.com/music-submissions" title="Indie music blog that reviews your music. Submit your music for review here.">Music Submissions</a></li>
             </div>
-            <div class="sidr left" id="sidr-2">
-                <div class="sidr-inner">
-                    <li class="sidr-class-first sidr-class-leaf"><a href="http://www.syffal.com/search" title="Search SYFFAL.com for album reviews, interviews, videos and more.">Search</a></li>
-                    <li class="sidr-class-leaf"><a href="http://www.syffal.com/" title="Indie music blog, album reviews, music videos, and interviews.">Home</a></li>
-                    <li class="sidr-class-leaf"><a href="http://www.syffal.com/videos" title="Indie music videos.">Videos</a></li>
-                    <li class="sidr-class-leaf"><a href="http://www.syffal.com/album-reviews" title="Indie music album reviews.">Album Reviews</a></li>
-                    <li class="sidr-class-leaf"><a href="http://www.syffal.com/interviews" title="Indie music interviews.">Interviews</a></li>
-                    <li class="sidr-class-expanded sidr-class-active-trail"><a href="http://www.syffal.com/articles" title="Indie music articles." class="sidr-class-active-trail">Articles</a>
-                        <ul class="sidr-class-menu">
-                            <li class="sidr-class-first sidr-class-leaf"><a href="http://www.syffal.com/articles/bandcamp" title="Indie music BandCamp reviews.">Bandcamp</a></li>
-                            <li class="sidr-class-leaf"><a href="http://www.syffal.com/articles/soundcloud" title="Indie music Soundcloud reviews.">Soundcloud</a></li>
-                            <li class="sidr-class-leaf sidr-class-active-trail"><a href="http://www.syffal.com/articles/best-of" title="Indie Music Best Of Lists." class="sidr-class-active sidr-class-active-trail">Best Of</a></li>
-                            <li class="sidr-class-leaf"><a href="http://www.syffal.com/articles/favorite-songs" title="Our favorite indie music songs.">Favorite Songs</a></li>
-                            <li class="sidr-class-leaf"><a href="http://www.syffal.com/articles/concert-reviews" title="Indie Music concert reviews.">Concert Reviews</a></li>
-                            <li class="sidr-class-leaf"><a href="http://www.syffal.com/articles/no-words" title="Indie music photo galleries.">No Words</a></li>
-                            <li class="sidr-class-leaf"><a href="http://www.syffal.com/articles/announcements" title="Indie music show announcements and album release announcements.">Announcements</a></li>
-                            <li class="sidr-class-leaf"><a href="http://www.syffal.com/articles/laugh-what-i-love" title="Our musical guilty pleasures.">Laugh At What I Love</a></li>
-                            <li class="sidr-class-leaf"><a href="http://www.syffal.com/articles/love-dad" title="Joel's top 5 lists and more.">Love Dad</a></li>
-                            <li class="sidr-class-leaf"><a href="http://www.syffal.com/articles/one-song" title="Indie music song reviews.">One Song</a></li>
-                            <li class="sidr-class-leaf"><a href="http://www.syffal.com/articles/pop-cultures-collide" title="Indie bands recreate songs from popular tv shows and movies.">Pop Cultures Collide</a></li>
-                            <li class="sidr-class-leaf"><a href="http://www.syffal.com/articles/quick-fix" title="Indie music songs and videos for your daily dose of new music.">Quick Fix</a></li>
-                            <li class="sidr-class-last sidr-class-leaf"><a href="http://www.syffal.com/articles/world-premiere" title="Indie music world premier videos and songs.">World Premiere</a></li>
-                        </ul>
-                    </li>
-                    <li class="sidr-class-last sidr-class-leaf"><a href="http://www.syffal.com/music-submissions" title="Indie music blog that reviews your music. Submit your music for review here.">Music Submissions</a></li>
-                </div>
+        </div>
+        <div class="sidr left" id="sidr-2">
+            <div class="sidr-inner">
+                <li class="sidr-class-first sidr-class-leaf"><a href="http://www.syffal.com/search" title="Search SYFFAL.com for album reviews, interviews, videos and more.">Search</a></li>
+                <li class="sidr-class-leaf"><a href="http://www.syffal.com/" title="Indie music blog, album reviews, music videos, and interviews.">Home</a></li>
+                <li class="sidr-class-leaf"><a href="http://www.syffal.com/videos" title="Indie music videos.">Videos</a></li>
+                <li class="sidr-class-leaf"><a href="http://www.syffal.com/album-reviews" title="Indie music album reviews.">Album Reviews</a></li>
+                <li class="sidr-class-leaf"><a href="http://www.syffal.com/interviews" title="Indie music interviews.">Interviews</a></li>
+                <li class="sidr-class-expanded sidr-class-active-trail"><a href="http://www.syffal.com/articles" title="Indie music articles." class="sidr-class-active-trail">Articles</a>
+                    <ul class="sidr-class-menu">
+                        <li class="sidr-class-first sidr-class-leaf"><a href="http://www.syffal.com/articles/bandcamp" title="Indie music BandCamp reviews.">Bandcamp</a></li>
+                        <li class="sidr-class-leaf"><a href="http://www.syffal.com/articles/soundcloud" title="Indie music Soundcloud reviews.">Soundcloud</a></li>
+                        <li class="sidr-class-leaf sidr-class-active-trail"><a href="http://www.syffal.com/articles/best-of" title="Indie Music Best Of Lists." class="sidr-class-active sidr-class-active-trail">Best Of</a></li>
+                        <li class="sidr-class-leaf"><a href="http://www.syffal.com/articles/favorite-songs" title="Our favorite indie music songs.">Favorite Songs</a></li>
+                        <li class="sidr-class-leaf"><a href="http://www.syffal.com/articles/concert-reviews" title="Indie Music concert reviews.">Concert Reviews</a></li>
+                        <li class="sidr-class-leaf"><a href="http://www.syffal.com/articles/no-words" title="Indie music photo galleries.">No Words</a></li>
+                        <li class="sidr-class-leaf"><a href="http://www.syffal.com/articles/announcements" title="Indie music show announcements and album release announcements.">Announcements</a></li>
+                        <li class="sidr-class-leaf"><a href="http://www.syffal.com/articles/laugh-what-i-love" title="Our musical guilty pleasures.">Laugh At What I Love</a></li>
+                        <li class="sidr-class-leaf"><a href="http://www.syffal.com/articles/love-dad" title="Joel's top 5 lists and more.">Love Dad</a></li>
+                        <li class="sidr-class-leaf"><a href="http://www.syffal.com/articles/one-song" title="Indie music song reviews.">One Song</a></li>
+                        <li class="sidr-class-leaf"><a href="http://www.syffal.com/articles/pop-cultures-collide" title="Indie bands recreate songs from popular tv shows and movies.">Pop Cultures Collide</a></li>
+                        <li class="sidr-class-leaf"><a href="http://www.syffal.com/articles/quick-fix" title="Indie music songs and videos for your daily dose of new music.">Quick Fix</a></li>
+                        <li class="sidr-class-last sidr-class-leaf"><a href="http://www.syffal.com/articles/world-premiere" title="Indie music world premier videos and songs.">World Premiere</a></li>
+                    </ul>
+                </li>
+                <li class="sidr-class-last sidr-class-leaf"><a href="http://www.syffal.com/music-submissions" title="Indie music blog that reviews your music. Submit your music for review here.">Music Submissions</a></li>
             </div>
+        </div>
+
+
+
+        <script>
+            var SoundninjaOpts = {
+                selector: '.albumReviewBody p',
+                selectorFullMatch: false,
+                minHotttnesss: 0.6707,
+                minFamiliarity: 0.6707
+            }
+        </script>
+        <script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script>
+
 </body>
 
 </html>
