--- a/FutureClassic-demo/index.html
+++ b/FutureClassic-demo/index.html
@@ -136,7 +136,7 @@ img.emoji {
 			<p>A huge thank you to everyone who helped us celebrate our&nbsp;FCX:
  10 Years of Future Classic birthday event. In collaboration with Vivid 
 LIVE, we were fortunate enough to party on the Sydney Opera 
-House’s&nbsp;outdoor northern broadwalk with sets from&nbsp;<strong>Flume</strong>,<strong> Flight Facilities</strong>,&nbsp;<strong>Seekae</strong>,&nbsp;<strong>Wave Racer</strong>,&nbsp;<strong>Hayden James</strong>,&nbsp;<strong>Touch Sensitive</strong>&nbsp;&amp;&nbsp;<strong>Charles Murdoch</strong>.</p>
+House’s&nbsp;outdoor broadwalk with sets from&nbsp;<strong>Flume</strong>,<strong> Flight Facilities</strong>,&nbsp;<strong>Seekae</strong>,&nbsp;<strong>Wave Racer</strong>,&nbsp;<strong>Hayden James</strong>,&nbsp;<strong>Touch Sensitive</strong>&nbsp;&amp;&nbsp;<strong>Charles Murdoch</strong>.</p>
 <p>Check out the full run of pics <a href="https://www.facebook.com/media/set/?set=a.10153228221016348.1073741837.8497226347&amp;type=1" target="_blank">here</a>!</p>
 <p>Big love to everyone who has championed our artists &amp; danced at 
 our parties over the last TEN years. Thank you for listening! xxx</p>
