--- a/Melismatic-demo/index.html
+++ b/Melismatic-demo/index.html
@@ -1255,7 +1255,7 @@ I was here for one reason and one reason only: to see Brit, Rosie, and Marina, t
 <div style="text-align: justify;">
 <br></div>
 <div style="text-align: justify;">
-The album is full of sweet harmonies set to decadently dark chords and super hooky guitar licks. Think <b>HAIM</b>, if they had a love child with <b>Hole</b> and <b>Joy Division</b>, with a New Wave aesthetic -- bad ass sounds but with a pop sensibility. A surprise favorite of their set was <a href="https://soundcloud.com/newmyths/out-of-control"><b>"Out of Control"</b></a>. The song is multi-layered and quietly intense on the album itself but seeing them in a live setting gives the song a whole new life, especially the insidious chanty bit of "To find, to find / The way to say, to say / The way I know you know I need you now".</div>
+The album is full of sweet harmonies set to decadently dark chords and super hooky guitar licks. Think <b>Haim</b>, if they had a love child with <b>Hole</b> and <b>Joy Division</b>, with a New Wave aesthetic -- bad ass sounds but with a pop sensibility. A surprise favorite of their set was <a href="https://soundcloud.com/newmyths/out-of-control"><b>"Out of Control"</b></a>. The song is multi-layered and quietly intense on the album itself but seeing them in a live setting gives the song a whole new life, especially the insidious chanty bit of "To find, to find / The way to say, to say / The way I know you know I need you now".</div>
 <br>
 <center>
 <iframe allowfullscreen="" frameborder="0" height="315" src="https://www.youtube.com/embed/SwhWGvKCIu8" width="560"></iframe></center>
