--- a/Vault1520-demo/index.html
+++ b/Vault1520-demo/index.html
@@ -302,7 +302,7 @@ hear it. The Canadian rapper shocked us all when he pulled a Beyonce,
 and dropped his mixtape,&nbsp;<em><strong>If You’re Reading this it’s Too Late</strong></em>,
  back in February. Since then, he’s been featured on numerous tracks in 
 usual fashion, showing that crazy work ethic that he’s famous for.</p>
-<p style="text-align: justify">This weekend,&nbsp;<strong>Drake</strong> hinted that&nbsp;<strong>Willow&nbsp;</strong><b>Smith</b>&nbsp;may be featured on his upcoming album. Both artists were performing at <em>Wireless Festival</em>
+<p style="text-align: justify">This weekend,&nbsp;<strong>Drake</strong> hinted that <strong>Willow Smith</strong> may be featured on his upcoming album. Both artists were performing at <em>Wireless Festival</em>
  in London, and he posted a photo of the young singer on his Instagram 
 page with the caption “Young muse all on views.” Obviously 
 it’s&nbsp;open to interpretation, but we hope that our suspicions are 
