updating script location

--- a/DefPenRadio-demo/index.html
+++ b/DefPenRadio-demo/index.html
@@ -709,7 +709,7 @@ _ttf.push({
             minFamiliarity: 0.6707
         }
 </script>
-<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script>
 
 <!-- need to refresh to see cached version --></b><script defer="defer" src="dpenradio_files/v1_gs_lib-269f7c7bf533e329cec424a6b3c17887.js"></script></div><div style="" id="shiftnav-toggle-main" class="shiftnav-toggle shiftnav-toggle-shiftnav-main shiftnav-toggle-main-align-center shiftnav-toggle-edge-left shiftnav-toggle-icon-x shiftnav-toggle-main-align-center shiftnav-toggle-edge-left shiftnav-toggle-icon-x" data-shiftnav-target="shiftnav-main"><span class="shiftnav-main-toggle-content shiftnav-toggle-main-block"><a href="http://defpenradio.com/">Def Pen Radio</a></span>	<span class="shiftnav-main-toggle-content-after">
 	<!-- ShiftNav Search Bar Toggle -->
