--- a/FBV-demo/index.html
+++ b/FBV-demo/index.html
@@ -212,7 +212,7 @@ which includes "Move": a beautiful…</p><p class="jp-relatedposts-post-date">Fe
             minFamiliarity: 0.6707 
         }
 </script>
-<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script> 
+<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script> 
         
         
 		<span class="tag-links"><strong>Tagged</strong> <a href="http://freebikevalet.com/tag/diev/" rel="tag">"Diev"</a>, <a href="http://freebikevalet.com/tag/waveless/" rel="tag">"Waveless"</a>, <a href="http://freebikevalet.com/tag/big-harp/" rel="tag">Big Harp</a>, <a href="http://freebikevalet.com/tag/chris-senseney/" rel="tag">Chris Senseney</a>, <a href="http://freebikevalet.com/tag/daniel-ocanto/" rel="tag">Daniel Ocanto</a>, <a href="http://freebikevalet.com/tag/john-congleton/" rel="tag">John Congleton</a>, <a href="http://freebikevalet.com/tag/majestic-litter/" rel="tag">Majestic Litter</a>, <a href="http://freebikevalet.com/tag/saddle-creek/" rel="tag">Saddle Creek</a>, <a href="http://freebikevalet.com/tag/st-vincent/" rel="tag">St. Vincent</a>, <a href="http://freebikevalet.com/tag/stefanie-drootin-senseney/" rel="tag">Stefanie Drootin-Senseney</a>, <a href="http://freebikevalet.com/tag/the-valley/" rel="tag">The Valley</a>, <a href="http://freebikevalet.com/tag/two-gallants/" rel="tag">Two Gallants</a></span>	</div>
