--- a/FTLP-demo/index.html
+++ b/FTLP-demo/index.html
@@ -2603,7 +2603,7 @@ Share on Facebook Tweet... </a></li>
             minFamiliarity: 0.6707
         }
     </script>
-    <script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script>
+    <script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script>
 
 
     <script type="text/javascript" src="FTLP_files/e-201542.js" async="" defer="defer"></script>
