--- a/Music-Times-demo/index.html
+++ b/Music-Times-demo/index.html
@@ -484,7 +484,7 @@ No. 2 status this week.</p>
             minFamiliarity: 0.6707 // IRS
         }
     </script>
-<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript"></script>
+<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript"></script>
 		<div class="at-tag">
 			See More <a href="http://www.musictimes.com/tags/wiz-khalifa">Wiz Khalifa</a> <a href="http://www.musictimes.com/tags/taylor-swift">Taylor Swift</a> <a href="http://www.musictimes.com/tags/fetty-wap">Fetty Wap</a> <a href="http://www.musictimes.com/tags/walk-the-moon">walk the moon</a> <a href="http://www.musictimes.com/tags/mark-ronson">Mark Ronson</a> <a href="http://www.musictimes.com/tags/bruno-mars">Bruno Mars</a> <a href="http://www.musictimes.com/tags/the-weeknd">The Weeknd</a> <a href="http://www.musictimes.com/tags/jason-derulo">Jason Derulo</a> <a href="http://www.musictimes.com/tags/david-guetta">David Guetta</a> <a href="http://www.musictimes.com/tags/nicki-minaj">Nicki Minaj</a> <a href="http://www.musictimes.com/tags/maroon-5">Maroon 5</a> <a href="http://www.musictimes.com/tags/t-wayne">T-Wayne</a>		</div>
     
