--- a/MusicDealers-demo/index.html
+++ b/MusicDealers-demo/index.html
@@ -1164,7 +1164,7 @@ ga('send', 'pageview');
             minFamiliarity: 0.6707
         }
 </script>
-<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script> 
+<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script> 
 
 
 <a style="display: none;" class="to-top" href="#"></a><div id="ui-datepicker-div" class="ui-datepicker ui-widget ui-widget-content ui-helper-clearfix ui-corner-all"></div><div class="sitetour-overlay light" style="height:2307px;"></div><div class="sitetour-wrapper"><div class="sitetour-fakemouse"></div><div class="sitetour-text light"><div class="sitetour-text-main"><h1></h1><p></p></div><div class="sitetour-text-navigation"><a class="sitetour-prev">Previous</a> <a class="sitetour-next">Next</a> <a class="austin-button btn-blue btn-sm sitetour-get-started">Get Started</a></div><div class="triangle-down"></div><!-- <div class="sitetour-text-shadow"></div> --></div><div style="display: none;" class="sitetour-spotlight"><div style="display: none; transform: skew(3deg, 0deg); left: -1px;" class="sitetour-dropshadow"></div></div></div><div id="ads"></div><iframe tabindex="-1" style="width: 1px; height: 1px; position: absolute; top: -100px;" src="musicDealers_files/postmessageRelay.html" id="oauth2relay538908985" name="oauth2relay538908985"></iframe></body></html>
