--- a/RockMeetsCountry-demo/index.html
+++ b/RockMeetsCountry-demo/index.html
@@ -298,7 +298,7 @@ The day before her duets album “Bridges” was released Mary Sarah turned 19 y
             minFamiliarity: 0.6707
         }
 </script>
-<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script>
                 
 					<div class="fixfloat">
 			</div>
