--- a/DiscoNaivete-demo/index.html
+++ b/DiscoNaivete-demo/index.html
@@ -222,7 +222,7 @@ opacity: 1;
             minFamiliarity: 0.6707
         }
 </script>
-<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script>
 				
 				<!--Navigation begin-->
 				<div id="nav">
