--- a/FleemarketFunk-demo/index.html
+++ b/FleemarketFunk-demo/index.html
@@ -821,7 +821,7 @@ var HighlanderComments = {"loggingInText":"Logging In\u2026","submittingText":"P
             minFamiliarity: 0.6707
         }
 </script>
-<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script>
     
 				<script type="text/javascript">
 			var windowOpen;
