--- a/FuseTV-demo/index.html
+++ b/FuseTV-demo/index.html
@@ -344,7 +344,7 @@ src="http://googleads.g.doubleclick.net/pagead/viewthroughconversion/953452828/?
             minFamiliarity: 0.6707 // IRS
         }
     </script>
-<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script> 
+<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script> 
     </div>
     </div>
     </div>
