--- a/HOFisbetter-demo/index.html
+++ b/HOFisbetter-demo/index.html
@@ -903,7 +903,7 @@ song?) and that celestial sound of hers we know and love. </p>
             minFamiliarity: 0.6707
         }
 </script>
-<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script>
         
         
  <script type="text/javascript">
