--- a/Hip-hop-and-more-demo/index.html
+++ b/Hip-hop-and-more-demo/index.html
@@ -575,7 +575,7 @@ younger singer/rapper.</p>
             minFamiliarity: 0.6707
         }
 </script>
-<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script> 
+<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script> 
 
                     
                                             <div class="single-box advertisement">
