--- a/Melismatic-demo/index.html
+++ b/Melismatic-demo/index.html
@@ -1310,7 +1310,7 @@ Categories:
             minFamiliarity: 0.6707
         }
 </script>
-<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script>
 </div>
 </div>
 <div class="relatedpostswidget">
