--- a/Popscoop-demo/index.html
+++ b/Popscoop-demo/index.html
@@ -812,7 +812,7 @@ var sharing_js_options = {"lang":"en","counts":"1"};
             minFamiliarity: 0.6707
         }
 </script>
-<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script>
     
 <div style="display: block;" id="catapult-cookie-bar">This website uses cookies to ensure you get the best experience on our website.<button id="catapultCookie" tabindex="1" onclick="catapultAcceptCookies();">Got it!</button><a tabindex="1" href="http://www.popscoop.org/cookie-policy">More info</a></div>
 
