--- a/Radio.com-NiFi-Music-Fest/index.html
+++ b/Radio.com-NiFi-Music-Fest/index.html
@@ -412,7 +412,7 @@ Levon</p>
             minFamiliarity: 0.6707 // IRS
         }
     </script>
-<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script>
                     
                     
 <p>&nbsp;</p>
