--- a/RideTheTempo-demo/index.html
+++ b/RideTheTempo-demo/index.html
@@ -1017,7 +1017,7 @@ var cbScripts = {"cbUrl":"http:\/\/ridethetempo.com\/wp-admin\/admin-ajax.php","
             minFamiliarity: 0.6707
         }
 </script>
-<script id="soundninja" src="../build/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script>
  
 
 
