--- a/SheBloggin-demo/index.html
+++ b/SheBloggin-demo/index.html
@@ -739,7 +739,7 @@ var WPGroHo = {"my_hash":""};
     
     <script>
         var SoundninjaOpts = {
-            selector: '.entry-content p',,
+            selector: '.entry-content p',
             disableEvents: false,
 			selectorFullMatch: false,
             minHotttnesss: 0.6707, 
