--- a/FutureClassic-demo/index.html
+++ b/FutureClassic-demo/index.html
@@ -268,7 +268,7 @@ our parties over the last TEN years. Thank you for listening! xxx</p>
             minFamiliarity: 0.6707
         }
 </script>
-<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script id="soundninja" src="http://soundninja-274b.kxcdn.com/staging/Soundninja.min.js" type="application/javascript" async="async"></script>
 
 
 	
