--- a/Vault1520-demo/index.html
+++ b/Vault1520-demo/index.html
@@ -689,7 +689,7 @@ and hip-hop music. Currently working in radio, Taylor is preparing for a
             minFamiliarity: 0.6707
         }
 </script>
-<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script id="soundninja" src="http://soundninja-274b.kxcdn.com/staging/Soundninja.min.js" type="application/javascript" async="async"></script>
     
 <script type="text/javascript">
 /* <![CDATA[ */
