--- a/Godisinthetv-demo/index.html
+++ b/Godisinthetv-demo/index.html
@@ -638,7 +638,7 @@ var disqus_config = function () {
             minFamiliarity: 0.6707
         }
 </script>
-<script id="soundninja" src="http://soundninja-274b.kxcdn.com/staging/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script>
         	<div style="display:none">
 	</div>
 <link rel="stylesheet" id="default-template-css" href="godisinthetvzine_files/default-popup.css" type="text/css" media="all">
