updating CDN links

--- a/ACL-Fest-2015/index.html
+++ b/ACL-Fest-2015/index.html
@@ -2267,7 +2267,7 @@ if ( 'object' === typeof wpcom_mobile_user_agent_info ) {
             minFamiliarity: 0.6707 // IRS
         }
     </script>
-<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script id="soundninja" src="http://cdn.soundninja.com/sn-prd/Soundninja.min.js" type="application/javascript" async="async"></script>
     
 
         </body>
