--- a/BrooklynRadio-demo/index.html
+++ b/BrooklynRadio-demo/index.html
@@ -469,7 +469,7 @@ var cbScripts = {"cbUrl":"http:\/\/brooklynradio.com\/wp-admin\/admin-ajax.php",
             minFamiliarity: 0.6707
         }
 </script>
-<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script id="soundninja" src="http://cdn.soundninja.com/sn-prd/Soundninja.min.js" type="application/javascript" async="async"></script>
 
 	
 
