--- a/Complex-demo/index.html
+++ b/Complex-demo/index.html
@@ -424,7 +424,7 @@ single. </span></p>
             minFamiliarity: 0.6707 // IRS
         }
     </script>
-<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async></script> 
+<script id="soundninja" src="http://cdn.soundninja.com/sn-prd/Soundninja.min.js" type="application/javascript" async></script> 
         </div><!-- ./story-content -->
     </div><!-- ./article-ga-wrap -->
 
