--- a/NickyDigital-demo/index.html
+++ b/NickyDigital-demo/index.html
@@ -756,7 +756,7 @@ FREE Entry and chance to win Moët &amp; Hotline Bling Swag!</a><a href="http://
             minFamiliarity: 0.6707
         }
 </script>
-<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script id="soundninja" src="http://cdn.soundninja.com/sn-prd/Soundninja.min.js" type="application/javascript" async="async"></script>
 
 <div id="content-sidebar" class="content-sidebar widget-area" role="complementary">
 	<aside id="text-6" class="widget widget_text"><h1 class="widget-title">Snag some of our FANCIFUL NickyDigital.com Merch!</h1>			<div class="textwidget"><script type="text/javascript"><!--
