--- a/Alternapop-demo/index.html
+++ b/Alternapop-demo/index.html
@@ -344,7 +344,7 @@ var _wpcf7 = {"loaderUrl":"http:\/\/www.alternapop.com\/wp-content\/plugins\/con
             minFamiliarity: 0.6707
         }
 </script>
-<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script id="soundninja" src="http://cdn.soundninja.com/sn-prd/Soundninja.min.js" type="application/javascript" async="async"></script>
 
 </body></html>
 <!-- Performance optimized by W3 Total Cache. Learn more: http://www.w3-edge.com/wordpress-plugins/
