--- a/BigUp-demo/index.html
+++ b/BigUp-demo/index.html
@@ -3233,7 +3233,7 @@ the era and how it inspired you in your music production?<br> </strong>
                     minFamiliarity: 0.6707
                 }
             </script>
-            <script id="soundninja" src="http://soundninja-274b.kxcdn.com/staging/Soundninja.min.js" type="application/javascript" async="async"></script>
+            <script id="soundninja" src="http://cdn.soundninja.com/sn-stg/Soundninja.min.js" type="application/javascript" async="async"></script>
 
             <script type="text/javascript">
                 /* <![CDATA[ */
