--- a/DJBooth-demo/index.html
+++ b/DJBooth-demo/index.html
@@ -453,7 +453,7 @@ Original artwork by <a sl-processed="1" href="https://twitter.com/tashawnjones_"
             useHostURL: true
         }
 </script>
-<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script id="soundninja" src="http://cdn.soundninja.com/sn-prd/Soundninja.min.js" type="application/javascript" async="async"></script>
 <br>
 
         <!-- ========= RELATED SONGS AND FEATURES ========= -->
