--- a/Earmilk-demo/index.html
+++ b/Earmilk-demo/index.html
@@ -706,7 +706,7 @@ var zbPregResult = '0';
             minFamiliarity: 0.6707
         }
 </script>
-<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script id="soundninja" src="http://cdn.soundninja.com/sn-prd/Soundninja.min.js" type="application/javascript" async="async"></script>
     
     
 </div> 
