--- a/Greenlabel-demo/index.html
+++ b/Greenlabel-demo/index.html
@@ -974,7 +974,7 @@ rappers.</p>
             minFamiliarity: 0.6707 // IRS
         }
     </script>
-<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script> 
+<script id="soundninja" src="http://cdn.soundninja.com/sn-prd/Soundninja.min.js" type="application/javascript" async="async"></script> 
         
 
     <footer>
