--- a/Greenpointers-demo/index.html
+++ b/Greenpointers-demo/index.html
@@ -481,7 +481,7 @@ var thickboxL10n = {"next":"Next >","prev":"< Prev","image":"Image","of":"of","c
                 minFamiliarity: 0.6707
             }
         </script>
-        <script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script>
+        <script id="soundninja" src="http://cdn.soundninja.com/sn-prd/Soundninja.min.js" type="application/javascript" async="async"></script>
 
 
 
