--- a/Ladywood-demo/index.html
+++ b/Ladywood-demo/index.html
@@ -208,7 +208,7 @@ is my favorite smokie track; it's silky smooth. -R
             minFamiliarity: 0.6707 
         }
 </script>
-<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script> 
+<script id="soundninja" src="http://cdn.soundninja.com/sn-prd/Soundninja.min.js" type="application/javascript" async="async"></script> 
                         
                         
 			<div class="blog-social">
