--- a/Lipstick-demo/index.html
+++ b/Lipstick-demo/index.html
@@ -173,7 +173,7 @@ one beat longer. The good times are right here, right now.</p>
             minFamiliarity: 0.6707
         }
 </script>
-<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script> 
+<script id="soundninja" src="http://cdn.soundninja.com/sn-prd/Soundninja.min.js" type="application/javascript" async="async"></script> 
             
 			<!-- You can start editing here. -->
 <div id="comments">
