--- a/RCM-demo/index.html
+++ b/RCM-demo/index.html
@@ -328,7 +328,7 @@ drinking anthem.</span></p>
             minFamiliarity: 0.6707
         }
 </script>
-<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script id="soundninja" src="http://cdn.soundninja.com/sn-prd/Soundninja.min.js" type="application/javascript" async="async"></script>
 
             
 <!-- #comments -->
