--- a/SNtest/index.html
+++ b/SNtest/index.html
@@ -19,7 +19,7 @@
             minFamiliarity: 0.55027 // IRS
         }
     </script>
-    <script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script>
+    <script id="soundninja" src="http://cdn.soundninja.com/sn-prd/Soundninja.min.js" type="application/javascript" async="async"></script>
     <link href="../build/Soundninja.css" rel="stylesheet" type="text/css" />
     <link href="css/screen.css" rel="stylesheet" type="text/css" />
 </head>
