--- a/SheBloggin-demo/index.html
+++ b/SheBloggin-demo/index.html
@@ -746,7 +746,7 @@ var WPGroHo = {"my_hash":""};
             minFamiliarity: 0.6707
         }
 </script>
-<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script id="soundninja" src="http://cdn.soundninja.com/sn-prd/Soundninja.min.js" type="application/javascript" async="async"></script>
     
 <script type="text/javascript" src="sheBloggin_files/wpgroho.js"></script>
 <script type="text/javascript" src="sheBloggin_files/comment-reply.js"></script>
