--- a/TheImproper-demo/index.html
+++ b/TheImproper-demo/index.html
@@ -1185,7 +1185,7 @@ debut album, with Fallon and The Roots using classroom instruments.</p>
             minFamiliarity: 0.6707 // IRS
         }
     </script>
-<script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script>
+<script id="soundninja" src="http://cdn.soundninja.com/sn-prd/Soundninja.min.js" type="application/javascript" async="async"></script>
             
         
 <div itemprop="video" itemscope="" itemtype="http://schema.org/VideoObject"><iframe src="Madonna%20Sets%20Bar%20for%20Bitches%20With%20Tonight%20Show%20Performance%20%28watch%21%29_files/h6ahr6kRbHD_.htm" seamless="seamless" allowfullscreen="" frameborder="0" height="403.69083447332423" width="718"></iframe></div>
