--- a/Ugsmag-demo/index.html
+++ b/Ugsmag-demo/index.html
@@ -506,7 +506,7 @@ var sharing_js_options = {"lang":"en","counts":"1"};
             minFamiliarity: 0.6707
         }
     </script>
-    <script id="soundninja" src="http://soundninja-274b.kxcdn.com/live/Soundninja.min.js" type="application/javascript" async="async"></script>
+    <script id="soundninja" src="http://cdn.soundninja.com/sn-prd/Soundninja.min.js" type="application/javascript" async="async"></script>
 			
 			<img style="float: right; display: none" class="loading" src="ugsmag_files/loading.gif" alt="loading" height="16" width="16">
 			<input value="Send Email" class="sharing_send" type="submit">
